# dersdagitimprogrami

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ADVANCED_SCHEDULER_README.md  ALGORITHM_ANALYSIS_REPORT.md  ALGORITHM_IMPROVEMENTS.md  ALL_TASKS_COMPLETE_REPORT.md  ANALIZ_OZETI.md  BASELANGI_PROJE_ANALIZ_RAPORU.md  BUGFIX_DIVISION_BY_ZERO.md  COMPLETE_SUCCESS_REPORT.md  CONTRIBUTING.md  DERS_DAGITIM_ALGORITMA_RAPORU.md  DETAILED_ERROR_REPORT.md  DETAILED_RECOMMENDATIONS.md  DOCKER_GUIDE.md  Dockerfile  ERROR_REPORT.md  FINAL_FIX.md  FINAL_IMPROVEMENTS_REPORT.md  FINAL_IYILESTIRME_RAPORU.md  FINAL_SOLUTION.md  FIX_COMPLETE.md  FIX_DISTRIBUTION_ISSUES.md  FIX_SUMMARY.md  HARD_CONSTRAINTS_ENFORCEMENT.md  IMPROVEMENTS_COMPLETED.md  IMPROVEMENT_SUMMARY.md  KAPSAMLI_IYILESTIRME_RAPORU.md  KAPSAMLI_PROJE_ANALIZ_RAPORU.md  KRITIK_SORUNLAR_COZUM_RAPORU.md  KULLANICI_TALIMATI.md  LICENSE  LONG_TERM_IMPROVEMENTS_SUMMARY.md  MEDIUM_TERM_IMPROVEMENTS.md  MEDIUM_TERM_IMPROVEMENTS_SUMMARY.md  MODERN_SCHEDULE_REDESIGN.md  OPTIMIZATION_SUMMARY.md  PROJECT_ANALYSIS_REPORT.md  README.md  (+106 more)
.claude/: settings.local.json
algorithms/: advanced_metaheuristic_scheduler.py  advanced_scheduler.py  algorithm_selector.py  ant_colony_scheduler.py  backtracking_manager.py  base_scheduler.py  bottleneck_analyzer.py  conflict_checker.py  conflict_resolver.py  constants.py  constraint_priority_manager.py  constraint_relaxation_engine.py  csp_solver.py  curriculum_based_scheduler.py  enhanced_logging.py  enhanced_reporting_system.py  enhanced_schedule_generator.py  enhanced_simple_perfect_scheduler.py  heuristics.py  (+26 more)
(+236 files in other folders)
